@@ -14,6 +14,7 @@ Cobbler CHANGELOG
 - (BUGF) fix default pxe template to support default system record
 - (BUGF) redo the PXE menuif a profile is removed
 - (BUGF) properly escape snippets
+- (FEAT) Support Mercurial (hg) for scm tracking
 
 - Feb 15 2010 - 2.0.3.1
 - (BUGF) Fix kernel command line parsing
